Fix main nav on mobile breakpoints Fixes #3

--- a/wp-content/themes/cno-starter-theme/src/styles/components/_sidebar.scss
+++ b/wp-content/themes/cno-starter-theme/src/styles/components/_sidebar.scss
@@ -12,12 +12,4 @@
 			top: calc(var(--top-offset) + 32px);
 		}
 	}
-
-	.offcanvas-lg.offcanvas-start {
-		@include m.media-breakpoint-down(lg) {
-			body:has(#wpadminbar) & {
-				top: 32px;
-			}
-		}
-	}
 }
